@startuml A2

!define MyTheme
skinparam class {
    BackgroundColor #LightYellow
    BorderColor #000000
    FontColor #000000
}

skinparam stereotypeCBackgroundColor #LightYellow
skinparam stereotypeCBorderColor #000000
skinparam stereotypeCFontColor #000000

class Map {
    + creeks: List<POI>
    + emergencySite: List<POI>
    --
    + this()
    --
    + addCreek(creek: POI)
    + addEmergencySite(site: POI)
}

class POI {
  - kind: String
  - x: int
  - y: int
  --
    + this(kind: String, x: int, y: int)
  --
    + x(): int
    + y(): int
}

enum Direction {
  - symbol: char
  + toString(): String
  + getRight(): Direction
  + getLeft(): Direction
}

class Drone {
  - batteryLevel: integer
  - heading: Direction
  - x: int
  - y: int
  --
  + this(batteryLevel: Integer, heading: Direction)
  --
  + getHeading(): Direction
  + getBatteryLevel(): Integer
  + x(): int
  + y(): int
  + fly(): String
  + heading(dir: Direction): String
  - turnRight(): void
  - turnLeft(): void
  + echo(dir: Direction): String
  + scan(): String
  + stop(): String
  + updateDrone(response: JSONObject): void
}

Drone *-- Direction

POI <.. Map

@enduml